# SPS_Task1

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
